# prism

./: .env.example  .gitignore  README.md  main.py  main_financebench.py  main_fiqa.py  main_trec.py  pyproject.toml  requirements.txt
prompts/: chunk.json  doc.json  financebench.json  financebench_qa.json  fiqa.json  user.json
prompts/trec-dl-23/: user.json
src/: checkpoint_manager.py  icl_message_builder.py  schema.py
src/agentic/: agent_utils.py  main.py  pipeline_logger.py
src/agentic/chunk/: chunk_agent_factory.py  chunk_agent_response.py  chunk_experts.py  chunk_state_factory.py  main.py
src/agentic/chunk/utils/: general.py  v1.py  v2.py  v3.py  v4.py
src/agentic/doc/: doc_experts.py  doc_utils.py  question_analyzer.py
src/agentic/langgraph/: chunk_graph_factory.py  doc_graph.py  main.py
src/non_agentic/: utils.py
src/non_agentic/chunk/: chunk_utils.py
src/non_agentic/doc/: doc_utils.py
src/non_agentic/financebench/: configs.py  evaluate_answer.py  metrics_tracker.py  process_data.py  token_analysis.py  utils.py  vector_store.py
src/non_agentic/fiqa/: evaluation_utils.py  utils.py
src/non_agentic/trec_dl_23/passage/: passage_utils.py
